# vaseline_hackdelft

./: 01_explore_and_clean.ipynb  DESIGN.md  FINDINGS_AND_APPROACH.md  README_categorization.md  challenge.txt  main.py  pyproject.toml  run_categorize.py  starter_notebook.ipynb
dashboard/: executive_summary.html  revolut_insights_dashboard.html
engine_cat/: __init__.py  categorize.py  clean.py  embed.py  llm.py  taxonomy.py
insight_engine/: README.md  __init__.py  agent.py  analytics.py  api.py  base.py  contract.py  engine.py  ranking.py  run_demo.py  taxonomy.py
insight_engine/detectors/: __init__.py  cashflow_forecast.py  decline_shield.py  fx_fee_leakage.py  overspend_alert.py  peer_benchmarking.py  subscription_radar.py
output/: _mcc_inventory.csv  categorizer_eval.json  demo_dashboard.json
results_cat/: corrections.csv  merchant_categories.csv  report.md
src/categorization/: README.md  categorize.py  features.py  labels.py  taxonomy.py  train.py
trash_cleaning/: eda_and_cleaning.ipynb
